# calsinki

./: .gitignore  README.md  example-config.yaml  lint.py  pyproject.toml
.cursor/rules/: technical-considerations.mdc
calsinki/: __init__.py  auth.py  cli.py  config.py  purge.py  sync.py
docs/: GCP_SETUP.md
scripts/: README.md  purge_reclaim_events.py
