[project]
name = "calsinki"
version = "0.1.0"
description = "A self-hosted calendar synchronization service for multiple Google Calendar accounts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Rheinard Korf", email = "rheinard@korf.com.au"}
]
license = {text = "MIT"}
keywords = ["calendar", "sync", "google", "self-hosted", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "pyyaml>=6.0",
    "qrcode[pil]>=7.0",
    "requests>=2.31.0",
]

[project.scripts]
calsinki = "calsinki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
